--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RazorStripe;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DevConnection": "Server=(localdb)\\mssqllocaldb;Database=RazorStripe;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ReleaseConnection": ""
   },
   "Logging": {
     "LogLevel": {
