--- a/RazorStripe.csproj
+++ b/RazorStripe.csproj
@@ -1,23 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-RazorStripe-66F3C237-5BC7-493C-B78E-D8A31F0EDFE1</UserSecretsId>
     <SignAssembly>false</SignAssembly>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Remove="Pages\MasterAgentContacts\**" />
-    <Content Remove="Pages\MasterAgentContacts\**" />
-    <EmbeddedResource Remove="Pages\MasterAgentContacts\**" />
-    <None Remove="Pages\MasterAgentContacts\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Compile Remove="Data\Migrations\20181213010215_Complex.cs" />
-    <Compile Remove="Data\Migrations\20181213010215_Complex.Designer.cs" />
-  </ItemGroup>
 
   <ItemGroup>
     <Content Remove="bundleconfig.json" />
@@ -32,12 +20,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.BrowserLink" Version="2.2.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" PrivateAssets="All" />
-    <PackageReference Include="Stripe.net" Version="21.8.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" PrivateAssets="All" />
+    <PackageReference Include="Stripe.net" Version="35.3.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -57,13 +46,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-    <Folder Include="Data\ViewModels\" />
     <Folder Include="Pages\Shared\Components\" />
     <Folder Include="Services\Handlers\" />
     <Folder Include="Services\Requirements\" />
-    <Folder Include="Utility\" />
-    <Folder Include="ViewComponents\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 </Project>
